--- a/kanban-method/Makefile
+++ b/kanban-method/Makefile
@@ -1,8 +1,9 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -Werror -ansi -pedantic -g
+
 all:: proj1
 
-proj1: proj1.c
+proj1: proj1.c proj1.h
 
 clean::
 	rm -f proj1 a.out *.o core tests/*.diff
